<resources>
    <string name="app_name">Get Coffee</string>
  
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="entrance">Вход</string>
    <string name="nearest_coffeeshops">Ближайшие кофейни</string>
    <string name="on_map">На карте</string>
    <string name="map">Карта</string>
    <string name="menu">Меню</string>
    <string name="go_to_payment">Перейти к оплате</string>
    <string name="your_order">Ваш заказ</string>
    <string name="pay">Оплатить</string>
    <string name="pay_with_sum">Оплатить %1$d руб</string>
    <string name="order_message">Время ожидания заказа 15 минут!\n Спасибо, что выбрали нас</string>
    <string name="back_button_description">Это кнопка навигации назад</string>
    <string name="email">e-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="default_text">This is a defaut text</string>
    <string name="description_goods">Это изображение товара</string>
    <string name="description_add_button">Это кнопка добавить</string>
    <string name="description_remove_button">Это кнопка убрать</string>
    <string name="error_message">Что-то пошло не так, не удалось получить данные</string>
    <string name="price">%1$d руб</string>
    <string name="payment_is_ok">Оплата прошла, спасибо за заказ</string>
    <string name="empty_order">Вы пока ничего не заказали ;)</string>
    <string name="passwords_are_not_equal">Пароли не совпадают</string>
    <string name="test">Test</string>
</resources>