<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="14dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/coffee"
            android:id="@+id/iv_coffee"
            android:scaleType="centerCrop"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:contentDescription="@string/description_goods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_medium"
            android:text="@string/default_text"
            android:textColor="@color/brown_text"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_coffee" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sf_ui_bold"
            android:maxLines="1"
            android:text="@string/price"
            android:ellipsize="end"
            android:textColor="@color/brown"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_remove_product"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <ImageButton
            android:id="@+id/btn_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_add_button"
            android:padding="6dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/tv_product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_product_price" />


        <TextView
            android:id="@+id/tv_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_regular"
            android:text="100"
            android:layout_marginEnd="14dp"
            android:textColor="@color/brown"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_add_product"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_product"
            app:layout_constraintTop_toTopOf="@id/btn_add_product" />

        <ImageButton
            android:id="@+id/btn_remove_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_remove_button"
            android:padding="6dp"
            android:src="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_product"
            app:layout_constraintEnd_toStartOf="@id/tv_product_count"
            app:layout_constraintTop_toTopOf="@+id/btn_add_product" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>