<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.coffeeshops.ui.CoffeeShopsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/top_app_bar"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:padding="@dimen/navigation_button_inner_padding"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_ui_bold"
            android:text="@string/nearest_coffeeshops"
            android:textColor="@color/brown"
            android:textSize="@dimen/btn_text_size" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/recycler_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_on_map"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar"
        tools:itemCount="5"
        tools:listitem="@layout/coffe_shop_item"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminateTint="@color/brown"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_on_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sf_ui_medium"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_on_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_on_map"
        style="@style/MainButtonDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_buttons_height"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/on_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>