<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.authorization.ui.AuthorizationFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/top_app_bar"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:padding="@dimen/navigation_button_inner_padding"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_ui_bold"
            android:text="@string/entrance"
            android:textColor="@color/brown"
            android:textSize="@dimen/btn_text_size" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:fontFamily="@font/sf_ui_regular"
        android:text="@string/email"
        android:textColor="@color/brown"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toTopOf="@id/til_email"
        app:layout_constraintStart_toStartOf="@id/til_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginBottom="@dimen/edit_text_height"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:fontFamily="@font/sf_ui_regular"
        android:text="@string/password"
        android:textColor="@color/brown"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/til_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginBottom="@dimen/edit_text_height"
        android:hint="@string/email"
        app:endIconDrawable="@drawable/ic_show_password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/btn_sigh_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sigh_in"
        style="@style/MainButtonDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_buttons_height"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

</androidx.constraintlayout.widget.ConstraintLayout>